erDiagram
    CATEGORIES {
        uuid id PK
        string slug
        string name
    }

    CLEANUPS {
        uuid id PK
        string title
        text description
        jsonb location "StructuredLocation - city: str?, state: str?, zip_code: str?, country: str?"
        double latitude
        double longitude
        timestamptz scheduled_start
        timestamptz scheduled_end
        string status "ActivityStatus enum - open | scheduled | in_progress | completed | addressed | verified | cancelled"
        jsonb photo_urls "list of str (URLs)"
        jsonb metrics "CleanupMetrics - small_bags: int?, large_bags: int?, pounds: float?"
        uuid submitted_by_user_id
        jsonb organizer_user_ids "list of UUID"
        jsonb rsvp_user_ids "list of UUID"
        jsonb attended_user_ids "list of UUID"
    }

    DIRECTORY_ENTRIES {
        uuid id PK
        string name
        text description
        text image_url
        jsonb location "StructuredLocation - city: str?, state: str?, zip_code: str?, country: str?"
        float latitude
        float longitude
        jsonb social_links "SocialLinks - website: str?, instagram: str?, tiktok: str?, youtube: str?, facebook: str?, twitter: str?, app_store: str?, google_play: str?, github: str?"
        string suggested_category
        string edit_token
        boolean featured
        string status
        jsonb user_ids "list of UUID"
        timestamptz created_at
        timestamptz updated_at
    }

    DIRECTORY_ENTRY_CATEGORIES {
        uuid directory_entry_id PK,FK
        uuid category_id PK,FK
    }

    PROJECTS {
        uuid id PK
        string name
        text description
        text image_url
        jsonb location "StructuredLocation - city: str?, state: str?, zip_code: str?, country: str?"
        float latitude
        float longitude
        jsonb social_links "SocialLinks - website: str?, instagram: str?, tiktok: str?, youtube: str?, facebook: str?, twitter: str?, app_store: str?, google_play: str?, github: str?"
        string stage "ProjectStage enum - active | in_development | beta | sunset"
        string status
        string suggested_category
        string edit_token
        boolean featured
        jsonb user_ids "list of UUID"
        timestamptz created_at
        timestamptz updated_at
    }

    PROJECT_CATEGORIES {
        uuid project_id PK,FK
        uuid category_id PK,FK
    }

    PROJECT_DIRECTORY_ENTRIES {
        uuid project_id PK,FK
        uuid directory_entry_id PK,FK
    }

    PROJECT_IDEAS {
        uuid id PK
        string name
        text description
        uuid submitter_user_id FK
        string edit_token
        string status
        uuid merged_into_project_id FK
        string suggested_category
        timestamptz created_at
        timestamptz updated_at
    }

    IDEA_CATEGORIES {
        uuid idea_id PK,FK
        uuid category_id PK,FK
    }

    IDEA_SIMILAR_APPS {
        uuid id PK
        uuid idea_id FK
        text url
        string name
        text note
        uuid added_by_user_id FK
        timestamptz created_at
    }

    PROJECT_MEMBERS {
        uuid project_id PK,FK
        uuid user_id PK,FK
        string role
        text contact_info
        timestamptz joined_at
    }

    TRASH_REPORTS {
        uuid id PK
        string title
        text description
        jsonb location "StructuredLocation - city: str?, state: str?, zip_code: str?, country: str?"
        double latitude
        double longitude
        jsonb image_urls "list of str (URLs)"
        string severity "TrashReportSeverity enum - low | medium | high"
        string status "ActivityStatus enum - open | scheduled | in_progress | completed | addressed | verified | cancelled"
        timestamptz reported_at
        uuid submitted_by_user_id
        uuid resolved_by_user_id
        uuid resolved_by_cleanup_id
        timestamptz resolved_at
    }

    USERS {
        uuid id PK
        string firebase_uid
        string email
        string name
        text photo_url
        boolean admin
        timestamptz created_at
        timestamptz updated_at
    }

    DIRECTORY_ENTRIES ||--o{ DIRECTORY_ENTRY_CATEGORIES : has
    CATEGORIES ||--o{ DIRECTORY_ENTRY_CATEGORIES : has
    CATEGORIES ||--o{ PROJECT_CATEGORIES : has
    PROJECTS ||--o{ PROJECT_CATEGORIES : has
    PROJECTS ||--o{ PROJECT_DIRECTORY_ENTRIES : has
    DIRECTORY_ENTRIES ||--o{ PROJECT_DIRECTORY_ENTRIES : has
    USERS ||--o{ PROJECT_IDEAS : has
    PROJECTS ||--o{ PROJECT_IDEAS : has
    CATEGORIES ||--o{ IDEA_CATEGORIES : has
    PROJECT_IDEAS ||--o{ IDEA_CATEGORIES : has
    USERS ||--o{ IDEA_SIMILAR_APPS : has
    PROJECT_IDEAS ||--o{ IDEA_SIMILAR_APPS : has
    USERS ||--o{ PROJECT_MEMBERS : has
    PROJECTS ||--o{ PROJECT_MEMBERS : has
